nullaway_error_CDC45206-97E8-4AF8-A60E-FA4D5D7CE21C.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-beans/src/main/java/org/springframework/beans/factory/annotation/AutowiredAnnotationBeanPostProcessor.java:559: error: [NullAway] returning @Nullable expression from method with @NonNull return type
                return metadata;
                ^
    (see http://t.uber.com/nullaway )
